add item to readme

--- a/readme
+++ b/readme
@@ -15,3 +15,4 @@ Members:
 8 http://network.bepress.com/
 9 http://digitalcommons.bepress.com/online-journals/
 10 https://www.biomedcentral.com/journals
+11 https://pkp.sfu.ca/ojs-journals (from archive.org)
